# websocket-chat

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
app/application/api/: entrypoint.py  lifespan.py  schemas.py
app/application/api/common/websockets/: managers.py
app/application/api/messages/: filters.py  handlers.py  schemas.py
app/application/api/messages/websockets/: messages.py
app/application/api/websockets/: handlers.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/infrastructure/filters/: messages.py
app/infrastructure/message_brokers/: base.py  converters.py  kafka.py
app/infrastructure/repositories/: messages.py
app/infrastructure/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/services/: init.py  mediator.py
app/services/commands/: base.py  messages.py
app/services/events/: base.py  messages.py
app/services/exceptions/: base.py  mediator.py  messages.py
app/services/mediator/: base.py  command.py  event.py  query.py
app/services/queries/: base.py  messages.py
app/settings/: conf.py
docker/: Dockerfile  app.yaml  messaging.yaml  storages.yaml
docker-compose/: app.yaml
settings/: .isort.cfg
tests/: conftest.py  fixtures.py
tests/application/api/: conftest.py  test_messages.py
tests/domain/values/: test_messages.py
tests/kafka/: kafka_test_consumer.py  kafka_test_producer.py
tests/services/: conftest.py  test_messages.py
