[tool.poetry]
name = "websocket-chat"
version = "0.1.0"
description = "fastapi chat with clean architecture (using DDD concept)"
authors = ["Simon Golovinskiy"]
readme = "README.md"
packages = [{include = "websocket_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
motor = "^3.5.1"
uvicorn = {extras = ["all"], version = "^0.30.5"}
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
