[tool.poetry]
name = "websocket-chat"
version = "0.1.0"
description = "fastapi chat with clean architecture (using DDD concept)"
authors = ["Simon Golovinskiy"]
readme = "README.md"
packages = [{include = "websocket_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
motor = "^3.5.1"
uvicorn = {extras = ["all"], version = "^0.30.5"}
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
faker = "^26.2.0"
pre-commit = "^3.8.0"
black = "^24.8.0"
punq = "^0.7.0"
httpx = "^0.27.0"
pydantic-settings = "^2.4.0"
ipython = "^8.26.0"
autoflake = "^2.3.1"
aiokafka = "^0.11.0"
orjson = "^3.10.7"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
